--- a/templates/simple-document.qmd
+++ b/templates/simple-document.qmd
@@ -7,14 +7,13 @@ format:
   docx:
     reference-doc: simple-document.docx
     toc: true
-    number-sections: true
 ---
 
 # Introduction
 
 This is a sample Quarto document that demonstrates various formatting options for Microsoft Word output.
 
-You can write paragraphs with **bold text**, *italic text*, and `inline code`. You can also include [links](https://quarto.org) and other inline formatting.
+You can write paragraphs with **bold text**, *italic text*, and `inline code`.
 
 # Main Content
 
@@ -46,10 +45,6 @@ Here's a simple table:
 | Pages   | ✗          | ✓    |
 | TOC     | Limited    | ✓    |
 
-: Sample comparison table {#tbl-comparison}
-
-You can reference tables like @tbl-comparison in your text.
-
 ## Code Blocks
 
 Here's a code block with syntax highlighting:
@@ -78,15 +73,11 @@ You can apply custom styles defined in your reference document:
 This paragraph uses a custom style called "Emphasis".
 :::
 
-# Conclusion
+## Conclusion
 
-## Next Steps
+### Next Steps
 
 * Edit this file to create your document
 * Add more sections with `#`, `##`, `###` headings
 * Customize the reference document (`simple-document.docx`) with your preferred styles
 * Run `./render.sh` to generate your Word document and PDF
-
-## References
-
-For more information about Quarto Word documents, see the [official documentation](https://quarto.org/docs/output-formats/ms-word.html).
