docs: update example

--- a/examples/caseum/introduction.qmd
+++ b/examples/caseum/introduction.qmd
@@ -5,8 +5,10 @@ author: "Leo Simons"
 format:
   pptx:
     reference-doc: ../../templates/simple-presentation.pptx
+  docx:
+    reference-doc: ../../templates/simple-document.docx
+    toc: true
 ---
-
 
 # Introduction
 
