docs: note annoying word popup workaround, move examples

--- a/docs/examples/caseum/introduction.qmd
+++ b/docs/examples/caseum/introduction.qmd
@@ -4,9 +4,9 @@ subtitle: "Introducing a lightweight approach to software architecture"
 author: "Leo Simons"
 format:
   pptx:
-    reference-doc: ../../templates/simple-presentation.pptx
+    reference-doc: ../../../templates/simple-presentation.pptx
   docx:
-    reference-doc: ../../templates/simple-document.docx
+    reference-doc: ../../../templates/simple-document.docx
     toc: true
 ---
 
